Mon Mar 16 16:37:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (eventloop_sleep, lib_eventloop_core),
	  (lib_watchdog_core): tv_usec is not time_t.

Mon Mar 16 15:33:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_arity): fixed rdoc.  [ruby-core:18708]

Sun Mar 15 12:50:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (run_final): frees zombies only.  [ruby-dev:38171]

Sun Mar 15 04:19:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_call_finalizer_at_exit): leave Thread objects
	  unfinalized.  [ruby-dev:38168]

Sat Mar 14 14:21:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (rv_strdup): macro to duplicate nul-terminated string.
	  [ruby-core:22852]

	* util.c (ruby_dtoa): allocates one more byte to get rid of buffer
	  overrun.  a patch from Charlie Savage at [ruby-core:22604].

Fri Mar 13 19:44:21 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call0): should pass rest argument information even
	  when it's empty.  [ruby-dev:38117]

Fri Mar 13 19:41:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb (patchlevel): config.status may not contain
	  PATCHLEVEL even if other version numbers exist.

	* common.mk (EXTMK_ARGS): needs MINIRUBY for cross-compile.
	  [ruby-core:20131]

Fri Mar 13 09:17:12 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#fu_get_gid): stringify group
	  argument before making regexp match.  [ruby-dev:38155]

Thu Mar 12 15:26:02 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/openssl/test_ssl.rb (OpenSSL#test_client_session):
	  Debian's openssl 0.9.8g-13 failed at assert(ssl.session_reused?),
	  when use default SSLContext. [ruby-dev:36167]
	  backported r19268 from trunk. [ruby-core:22843]

Thu Mar 12 13:02:12 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* mkconfig.rb: patchlevel is sometimes minus.

	* win32/resource.rb: ditto.
	  thease changes are merged from trunk.
